ocp/jaeger/route-jaeger-all-in-one-inmemory.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"grafana"}]'
    openshift.io/host.generated: 'true'
  name: jaeger-all-in-one-inmemory
  uid: 6bd8b610-d15c-468a-b4fe-cb70ded763b2
  creationTimestamp: '2024-01-22T04:46:42Z'
  managedFields:
    - manager: jaeger-operator
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2024-01-22T04:46:42Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/managed-by': {}
            'f:app.kubernetes.io/name': {}
          'f:ownerReferences':
            .: {}
            'k:{"uid":"f906a688-22a8-479b-ae34-5b5b552799a0"}': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2024-01-22T04:46:43Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2024-01-22T13:33:26Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:app.openshift.io/connects-to': {}
          'f:labels':
            'f:app.kubernetes.io/part-of': {}
  namespace: default
  ownerReferences:
    - apiVersion: jaegertracing.io/v1
      kind: Jaeger
      name: jaeger-all-in-one-inmemory
      uid: f906a688-22a8-479b-ae34-5b5b552799a0
      controller: true
  labels:
    app: jaeger
    app.kubernetes.io/component: query-route
    app.kubernetes.io/instance: jaeger-all-in-one-inmemory
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jaeger-all-in-one-inmemory
    app.kubernetes.io/part-of: book-4-fun
spec:
  host: jaeger-all-in-one-inmemory-default.apps-crc.testing
  to:
    kind: Service
    name: jaeger-all-in-one-inmemory-query
    weight: 100
  port:
    targetPort: https-query
  tls:
    termination: reencrypt
  wildcardPolicy: None
status:
  ingress:
    - host: jaeger-all-in-one-inmemory-default.apps-crc.testing
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2024-01-22T04:46:42Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps-crc.testing
